# ospgrillage

./: .buildinfo  .buildinfo.bak  .coverage  .gitignore  Analysis.py  BenchMark_op.py  CHANGELOG.md  CONTRIBUTING.md  GUI_Tool.py  GrillageGenerator.py  Interface_script.py  LICENSE.md  Load.py  Material.py  Mesh.py  Openseespy_OOP.py  OpsGrillage.py  PlotWizard.py  README.md  README_pypi.rst  RunScript.py  SN3595_read.py  codecov.yml  editor.xml  filetypes.xml  genindex.html  github.xml  index.html  jdk.table.xml  member_sections.py  objects.inv  opGrillage.py  py-modindex.html  pyproject.toml  request_SN3595_demo.py  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  (+5 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: codecov_test_suite.yml  lint.yml  publish.yml  pytest.yml  release-drafter.yml  sphinx_docs_to_gh_pages.yaml  sphinx_docs_to_gh_pages.yml  test_publish.yml
Bridge Model/: Bridge model call.py  Bridgemodel.py  Openseespy_OOP.py
Bridge model opensees/: Analysis.py  Analysis_test.py  BenchMark_op.py  Benchmark bridge.xlsx  Bridge model call.py  BridgePickleGenerator.py  Bridge_member.py  Bridgemodel.py  GrillageGenerator.py  OpenModellerInterface.py  PlotWizard.py  RunScript.py  Vehicle.py  arrays.xlsx  save.p  test_Analysis.py
Bridge model opensees/docs/source/: Document_page.md  index.rst
Experimental Interface/: Experiment_downloader.py  SN3595_read.py  downloadmethod.py
_sources/: index.md.txt  index.rst.txt
_sources/notebooks/: curve_mesh.ipynb.txt  multi_span.ipynb.txt  super_t_analysis_workflow.ipynb.txt
_sources/pages/: additional_resources.md.txt  api_load_cases.rst.txt  api_load_static.rst.txt  api_reference.rst.txt  changelog.md.txt  creating_grillage_models.md.txt  getting_results.md.txt  getting_started.md.txt  model_templates.md.txt  performing_analysis.md.txt  troubleshooting.md.txt
_sources/rst/: APIdoc.rst.txt  Analysis.rst.txt  ChangeLog.rst.txt  Examples.rst.txt  GrillageMember.rst.txt  Installation.rst.txt  Loads.rst.txt  Material.rst.txt  ModelTemplates.md.txt  ModelTemplates.rst.txt  Module description.rst.txt  ModuleDoc.md.txt  ModuleDoc.rst.txt  Module_description.md.txt  OpsGrillage.add_load_case.rst.txt  OpsGrillage.load.rst.txt  OpsGrillage.rst.txt  PlotWizard.rst.txt  PostProcessing.md.txt  PostProcessing.rst.txt  Running_analysis.rst.txt  additional_resources.md.txt  api_grillage.rst.txt  api_load.rst.txt  api_load_cases.rst.txt  api_load_moving.rst.txt  api_load_static.rst.txt  api_members.rst.txt  api_mesh.rst.txt  api_postprocessing.rst.txt  contributing.md.txt  getting_started.md.txt  mesh_feature.md.txt  modules.rst.txt  ospgui.md.txt  ospgui.rst.txt  user_guide.md.txt
_static/: documentation_options.js
_windows/: git.xml  keymap.xml
devtools/conda-envs/: docs_env.yaml
docs/: _config.yml  build.py  index.html  requirements.txt
docs/source/: README.md  conf.py  index.md  index.rst
docs/source/notebooks/: Super_T_bridge_model.ipynb  curve_mesh.ipynb  mesh_showcase.ipynb  multi_span.ipynb  super_t_analysis_workflow.ipynb
docs/source/pages/: additional_resources.md  api_members.rst  api_mesh.rst  creating_grillage_models.md  user_guide.md
docs/source/rst/: APIdoc.md  APIdoc.rst  Examples.md  (+35 more)
examples/: 28m_supert.py  Example_super_T.py  Interface_script.py  Super_T_bridge_model_shell_beam.ipynb  mesh_feature.ipynb  super-t_example.ipynb
examples/workshop/: super-t_example-final.ipynb  super-t_example-final.slides.html
notebooks/: curve_mesh.html  curve_mesh.ipynb  mesh_showcase.html  mesh_showcase.ipynb  multi_span.html  multi_span.ipynb  super_t_analysis_workflow.html  super_t_analysis_workflow.ipynb
ops-grillage/: Mesh.py
opsgrillage/: Load.py  Material.py  Mesh.py  OpsGrillage.py  __init__.py  load.py  mat_lib.json  material.py  member_sections.py  members.py  mesh.py  opsgrillage.py  ospgrillage.py  static.py
ospgrillage/: __init__.py  load.py  material.py  members.py  mesh.py  osp_grillage.py  ospgrillage.py  postprocessing.py  static.py
pages/: additional_resources.html  api_grillage.html  api_load.html  api_load_cases.html  api_load_moving.html  api_load_static.html  api_load_types.html  api_material.html  api_members.html  api_mesh.html  api_postprocessing.html  api_reference.html  changelog.html  contributing.html  creating_grillage_models.html  examples.html  getting_results.html  getting_started.html  installation.html  links_and_references.html  mesh_features.html  model_templates.html  ospgui.html  package_design.html  performing_analysis.html  troubleshooting.html  user_guide.html
paper/: paper.bib  paper.md
rst/: APIdoc.html  Analysis.html  ChangeLog.html  Examples.html  GrillageMember.html  Installation.html  Loads.html  Material.html  ModelTemplates.html  Module description.html  ModuleDoc.html  Module_description.html  OpsGrillage.add_load_case.html  OpsGrillage.html  OpsGrillage.load.html  PlotWizard.html  PostProcessing.html  Running_analysis.html  Troubleshooting.html  additional_resources.html  api_grillage.html  api_load.html  api_load_cases.html  api_load_moving.html  api_load_static.html  api_load_types.html  api_material.html  api_members.html  api_mesh.html  api_postprocessing.html  contributing.html  getting_started.html  links_and_references.html  mesh_feature.html  modules.html  ospgui.html  user_guide.html
src/: load.py  mat_lib.json  members.py
src/ospgrillage/: GUI_tool.py  __init__.py  load.py  material.py  members.py  mesh.py  osp_grillage.py  ospgui.py  postprocessing.py  utils.py
tests/: fixtures.py  super_t_28.json  test_benchmark.py  test_file.py  test_load.py  test_material.py  test_member.py  test_osp_grillage.py  test_ospgui.py  test_postprocessing.py  test_static.py
tests/lusas_process/: Lusas_Outputs_cleaned.p  lusas_export_clean.py
(+12 files in other folders)
