[build-system]
requires = ["setuptools>=64.0",
            "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "ospgrillage"
dynamic = ["version"]
description = "Bridge deck grillage analysis using OpenSeesPy"
license = {text = "MIT"}
keywords = ["bridge, grillage, openseespy"]
authors = [ {name = "Monash Smart Structures", email = "colin.caprani@monash.edu"},
            {name = "Jun Wei Ngan", email = "jun.ngan@monash.edu"},
            {name = "Colin", email = "colin.caprani@monash.edu"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "openseespy>=3.2.2.6",
    "opsvis~=0.95.5",
    "vfo>=0.0.6",
    "matplotlib",
    "numpy~=1.24.4",
    "pandas",
    "scipy~=1.10.1",
    "xarray",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://monashsmartstructures.github.io/ospgrillage/"
Documentation = "https://monashsmartstructures.github.io/ospgrillage/"
Source = "https://github.com/MonashSmartStructures/ospgrillage"
Tracker = "https://github.com/MonashSmartStructures/ospgrillage/issues"

[project.optional-dependencies]
test = ["pytest >= 6.2.2"]

[tool.setuptools]
platforms = ["any"]
include-package-data = true
license-files = ["LICENSE.md"]

#[tool.setuptools.packages]
#find = {namespaces = false}

[tool.setuptools.dynamic]
version = {attr = "ospgrillage.__version__"}

[tool.distutils.bdist_wheel]
universal = 1

[tool.aliases]
test = "pytest"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]
pythonpath = [
  ".", "src",
]
