[metadata]
name = ospgrillage
version = attr: ospgrillage.__version__
description = Bridge deck grillage analysis using OpenSeesPy
url = https://monashsmartstructures.github.io/ospgrillage/
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
license_file = LICENSE.md
keyword = bridge, grillage, openseespy
author = Monash Smart Structures
author_email = colin.caprani@monash.edu
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering
    Environment :: Console
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls = 
    Documentation = https://monashsmartstructures.github.io/ospgrillage/
    Source =  https://github.com/MonashSmartStructures/ospgrillage
    Tracker = https://github.com/MonashSmartStructures/ospgrillage/issues

[options]
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.8
setup_requires =
    setuptools
install_requires = 
    openseespy>=3.2.2.6
    opsvis~=0.95.5
    openseespyvis>=0.0.6
    matplotlib
    numpy
    pandas
    scipy
    xarray

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[options.extras_require]
test =
    pytest >= 6.2.2

